update codes to show the place order button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,34 @@
                 <option value="small">Small: $10</option>
               </select>
             </div>
-            <div class="form-group">
+            <div class="toppings">
+              <label>Select Extra Toppings</label>
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" class="topping" value="anchovy">
+                  Anchovy: <strong>Regular + $1</strong>
+                </label>
+              </div>
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" class="topping" value="artichoke">
+                  Artichoke: <strong>Regular + $1</strong>
+                </label>
+              </div>
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" class="topping" value="cheese">
+                  Cheese: <strong>Regular + $2</strong>
+                </label>
+              </div>
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" class="topping" value="pepperoni">
+                  Pepperoni: <strong>Regular + $2</strong>
+                </label>
+              </div>
+            </div>
+            <!-- <div class="form-group">
               <label>Select Toppings</label>
               <select class="form-control" id="selectToppings">
                 <option></option>
@@ -46,7 +73,7 @@
                 <option value="cheese">Cheese (Regular + $2)</option>
                 <option value="pepperoni">Pepperoni (Regular + $1)</option>
               </select>
-            </div>
+            </div> -->
             <button type="submit" class="btn btn-primary">Choose this option</button>
           </form>
           <div id="reviewOrder">
