update codes to show price

--- a/index.html
+++ b/index.html
@@ -41,39 +41,28 @@
               <div class="checkbox">
                 <label>
                   <input type="checkbox" class="topping" value="anchovy">
-                  Anchovy: <strong>Regular + $1</strong>
+                  Anchovy: <em>Regular + $1</em>
                 </label>
               </div>
               <div class="checkbox">
                 <label>
                   <input type="checkbox" class="topping" value="artichoke">
-                  Artichoke: <strong>Regular + $1</strong>
+                  Artichoke: <em>Regular + $1</em>
                 </label>
               </div>
               <div class="checkbox">
                 <label>
                   <input type="checkbox" class="topping" value="cheese">
-                  Cheese: <strong>Regular + $2</strong>
+                  Cheese: <em>Regular + $2</em>
                 </label>
               </div>
               <div class="checkbox">
                 <label>
                   <input type="checkbox" class="topping" value="pepperoni">
-                  Pepperoni: <strong>Regular + $2</strong>
+                  Pepperoni: <em>Regular + $2</em>
                 </label>
               </div>
             </div>
-            <!-- <div class="form-group">
-              <label>Select Toppings</label>
-              <select class="form-control" id="selectToppings">
-                <option></option>
-                <option value="regular">Regular</option>
-                <option value="anchovy">Anchovy (Regular + $1)</option>
-                <option value="artichoke">Artichoke (Regular + $2)</option>
-                <option value="cheese">Cheese (Regular + $2)</option>
-                <option value="pepperoni">Pepperoni (Regular + $1)</option>
-              </select>
-            </div> -->
             <button type="submit" class="btn btn-primary">Choose this option</button>
           </form>
           <div id="reviewOrder">
@@ -81,15 +70,15 @@
             <ul id="pizzaList">
 
             </ul>
+            <p id="cost"></p>
             <button id="placeOrder" type="submit" class="btn btn-success">Place Order</button>
           </div>
         </div> <!-- closing div col-md-6 l-3 -->
 
         <div class="col-md-6">
           <div class="order">
-            <h2>Pizza Selection: </h2>
-            <p>Toppings: <span class="toppings"></span></p>
-            <p>Price: $<span class="price"></span> </p>
+            <h4>You have succesfully placed the order.</h4>
+            <h4>Thank you very much and good appetite.</h4>
           </div>
         </div> <!-- closing div col-md-6 l-3 -->
       </div> <!-- closing div row l-2 -->
